--- a/settings.html
+++ b/settings.html
@@ -41,5 +41,10 @@ title: Settings
     </div>
   </div>
 
-  <button type="submit" class="btn btn-default">Submit</button>
+  <div class="form-group">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
 </form>
