--- a/invoices.html
+++ b/invoices.html
@@ -8,7 +8,11 @@ title: Invoices
     <div class="panel panel-default">
       <div class="panel-heading">Current time period</div>
       <div class="panel-body">
-        @todo: select
+        <select class="form-control">
+          <option>2014</option>
+          <option>2013</option>
+          <option>2012</option>
+        </select>
       </div>
     </div>
   </div>
@@ -38,65 +42,69 @@ title: Invoices
 </div><!-- end row -->
 
 <h2>Invoices to be paid</h2>
-<table class="table table-striped">
+<table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
+      <th>Name</th>
+      <th>No.</th>
+      <th>Status</th>
+      <th>Value BTW in.</th>
+      <th>Value BTW ex.</th>
+      <th>BTW</th>
+      <th>Due date</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
+    {% for num in (1..5) %}
     <tr>
-      <td>1</td>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td><a href="#">Client name</td>
+      <td>{% cycle '221', '220', '219', '218' %}</td>
+      <td>
+        {% cycle '<span class="label label-default">Not paid</span>', '<span class="label label-danger">Late</span>' %}
+      </td>
+      <td>€1210</td>
+      <td>€1000</td>
+      <td>€210</td>
+      <td>In 5 days</td>
+      <td>
+        <a href="#" class="btn btn-default btn-xs">Edit</a>
+        <a href="#" class="btn btn-default btn-xs">Delete</a>
+      </td>
     </tr>
-    <tr>
-      <td>2</td>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+    {% endfor %}
   </tbody>
 </table>
 
 <h2>Paid invoices</h2>
-<table class="table table-striped">
+<table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
+      <th>Name</th>
+      <th>No.</th>
+      <th>Status</th>
+      <th>Value BTW in.</th>
+      <th>Value BTW ex.</th>
+      <th>BTW</th>
+      <th>Paid on time?</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
+    {% for num in (1..10) %}
     <tr>
-      <td>1</td>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td><a href="#">Client name</td>
+      <td>{% cycle '217', '216', '215', '214', '213', '212', '211', '210', '209', '208' %}</td>
+      <td><span class="label label-success">Paid</span></td>
+      <td>€1210</td>
+      <td>€1000</td>
+      <td>€210</td>
+      <td>OK</td>
+      <td>
+        <a href="#" class="btn btn-default btn-xs">Edit</a>
+        <a href="#" class="btn btn-default btn-xs">Delete</a>
+      </td>
     </tr>
-    <tr>
-      <td>2</td>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+    {% endfor %}
   </tbody>
 </table>
