Fix layout for settings

--- a/settings.html
+++ b/settings.html
@@ -1,10 +1,12 @@
 ---
-layout: single-form
+layout: app
 title: Settings
 ---
 
 <h1><span class="glyphicon glyphicon-cog"></span> Settings</h1>
+
 <h2>Your company data</h2>
+
 <form class="form-horizontal" role="form">
   <div class="form-group">
     <label for="addInvoiceName" class="col-sm-2 control-label">Name</label>
@@ -47,4 +49,5 @@ title: Settings
       <button type="submit" class="btn btn-default">Submit</button>
     </div>
   </div>
+
 </form>
