--- a/settings.html
+++ b/settings.html
@@ -28,6 +28,20 @@ title: Settings
       </div>
 
       <div class="form-group">
+        <label for="inputCountry" class="col-sm-2 control-label">Country</label>
+        <div class="col-sm-10">
+
+          <select class="form-control" id="inputCountry">
+            <option selected="true" value="BE">Belgium</option>
+            <option value="US">United States</option>
+            <option value="UK">United Kingdom</option>
+            <option value="FR">France</option>
+          </select>
+
+        </div>
+      </div>
+
+      <div class="form-group">
         <label for="addInvoiceVat" class="col-sm-2 control-label">VAT no.</label>
         <div class="col-sm-10">
           <input class="form-control" id="addInvoiceVat" placeholder="BE123 4544 11444">
