--- a/add-invoice.html
+++ b/add-invoice.html
@@ -1,4 +1,130 @@
 ---
-    layout: single-form
-    pagestates: add-invoice
+layout: app
+title: Add invoice
 ---
+
+
+<h1><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Invoice to</h3>
+  </div>
+  <div class="panel-body">
+    <form class="form-horizontal" role="form">
+
+      <div class="form-group">
+        <label for="invoiceClient" class="col-sm-2 control-label">Client</label>
+        <div class="col-sm-10">
+          <select id="invoiceClient" class="form-control">
+            <option value="cactus">Cactus Inc.</option>
+            <option value="octopus">Octopus Inc.</option>
+            <option value="ladybug">Ladybug Inc.</option>
+            <option value="somehacker">SomeHacker Inc.</option>
+          </select>
+          <p class="help-block">
+            <a href="/add-client.html">
+              <span class="glyphicon glyphicon-plus"></span>
+              Add a new client
+            </a>
+          </p>
+        </div>
+      </div>
+
+    </form>
+
+  </div> <!-- end panel body -->
+</div> <!-- end panel -->
+
+
+
+
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Items</h3>
+
+  </div>
+  <div class="panel-body">
+    <form class="form-horizontal" role="form">
+
+      <div class="multi-adder">
+        <!-- this only exists to work with the multi adder markup pattern -->
+        <div class="form-group">
+          <div class="col-sm-6">
+            <a href="#" class="btn btn-success multi-add">Add row</a>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-6">
+            <b>Description</b>
+          </div>
+          <div class="col-sm-3">
+            <b>Hours</b>
+          </div>
+          <div class="col-sm-3">
+            <b>Price</b>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-6">
+            <input class="form-control" type="text">
+          </div>
+          <div class="col-sm-3">
+            <input class="form-control" type="text">
+          </div>
+          <div class="col-sm-3">
+            <div class="input-group">
+              <span class="input-group-addon">€</span>
+              <input class="form-control" type="text">
+            </div>
+          </div>
+          <hr>
+        </div> <!-- end form group -->
+
+
+        <div class="multi-adder-row-holder hide">
+          <div class="multi-adder-row">
+            <div class="form-group">
+              <div class="col-sm-6">
+                <input class="form-control" type="text">
+              </div>
+              <div class="col-sm-3">
+                <input class="form-control" type="text">
+              </div>
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <span class="input-group-addon">€</span>
+                  <input class="form-control" type="text">
+                </div>
+              </div>
+              <hr>
+            </div> <!-- end form group -->
+          </div>
+        </div>
+
+      </div> <!-- end multi-adder -->
+
+
+    </form>
+
+  </div> <!-- end panel body -->
+</div> <!-- end panel -->
+
+
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    <a href="/invoices.html" class="pull-left">Cancel</a>
+
+    <div class="btn-toolbar pull-right" role="toolbar">
+      <a href="/invoices.html" class="btn btn-default">Preview</a>
+      <a href="/invoices.html" class="btn btn-default">Send via e-mail</a>
+      <a href="/invoices.html" class="btn btn-success">Save</a>
+    </div>
+
+  </div>
+</div> <!-- end panel -->
