--- a/add-invoice.html
+++ b/add-invoice.html
@@ -150,7 +150,7 @@ title: Add invoice
 
     <div class="btn-toolbar pull-right" role="toolbar">
       <a href="/invoices.html" class="btn btn-default">Preview</a>
-      <a href="/invoices.html" class="btn btn-default">Send via e-mail</a>
+      <a class="btn btn-default" data-toggle="modal" data-target="#send-email">Send via e-mail</a>
       <a href="/invoices.html" class="btn btn-success">Save</a>
     </div>
 
