update add invoice title

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -59,8 +59,6 @@ title: Add invoice
 
 <div class="panel panel-default">
   <div class="panel-heading clearfix">
-    <h3 class="panel-title col-md-6">Items</h3>
-
 
     <div class="form-group pull-right">
       <label>
@@ -72,6 +70,8 @@ title: Add invoice
         Fixed price
       </label>
     </div>
+
+    <h3 class="panel-title">Items</h3>
 
   </div>
   <div class="panel-body">
