add prototype nav

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-    layout: single-form
-    pagestates: login-register
+layout: single-form
+pagestates: login-register
+title: Login
 ---
 
 {% include login-form.html %}
