--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,7 @@ layout: app
 title: Clients
 ---
 
-<a class="btn" data-toggle="modal" data-target="#add-client">
+<a class="btn btn-success" data-toggle="modal" data-target="#add-client">
   <span class="glyphicon glyphicon-plus"></span>
   Add a new client
 </a>
