--- a/add-invoice.html
+++ b/add-invoice.html
@@ -39,7 +39,7 @@ title: Add invoice
             <option value="somehacker">SomeHacker Inc.</option>
           </select>
           <p class="help-block">
-            <a class="btn" data-toggle="modal" data-target="#add-client">
+            <a class="btn btn-link" data-toggle="modal" data-target="#add-client">
               <span class="glyphicon glyphicon-plus"></span>
               Add a new client
             </a>
