Some default form states on add invoice

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -9,12 +9,12 @@ title: Add invoice
     <div class="form-group">
 
         <label>
-          <input type="checkbox">
+          <input type="checkbox" checked>
           Use standard rate
         </label>
 
         <label>
-          <input type="checkbox">
+          <input type="checkbox" checked>
           Use default payment terms
         </label>
 
@@ -62,7 +62,7 @@ title: Add invoice
 
     <div class="form-group pull-right">
       <label>
-        <input type="radio" name="priceOption">
+        <input type="radio" name="priceOption" checked>
         Hour based
       </label>
       <label>
