--- a/invoices.html
+++ b/invoices.html
@@ -58,7 +58,7 @@ title: Invoices
   <tbody>
     {% for num in (1..5) %}
     <tr>
-      <td><a href="#">Client name</td>
+      <td><a href="edit-invoice.html">Client name</td>
       <td>{% cycle '221', '220', '219', '218' %}</td>
       <td>
         {% cycle '<span class="label label-default">Not paid</span>', '<span class="label label-danger">Late</span>' %}
@@ -93,7 +93,7 @@ title: Invoices
   <tbody>
     {% for num in (1..10) %}
     <tr>
-      <td><a href="#">Client name</td>
+      <td><a href="edit-invoice.html">Client name</td>
       <td>{% cycle '217', '216', '215', '214', '213', '212', '211', '210', '209', '208' %}</td>
       <td><span class="label label-success">Paid</span></td>
       <td>€1210</td>
