More stable markup for add invoice

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -4,20 +4,21 @@ title: Add invoice
 ---
 
 <div class="row">
-  <h1 class="col-md-6"><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
-  <div class="pull-right">
-    <div class="form-group">
-
-        <label>
-          <input type="checkbox" checked>
-          Use standard rate
-        </label>
-
-        <label>
-          <input type="checkbox" checked>
-          Use default payment terms
-        </label>
-
+  <div class="col-md-6">
+    <h1><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
+  </div>
+  <div class="col-md-6">
+    <div class="pull-right">
+      <div class="form-inline">
+          <label>
+            <input type="checkbox" checked>
+            Use standard rate
+          </label>
+          <label>
+            <input type="checkbox" checked>
+            Use default payment terms
+          </label>
+      </div>
     </div>
   </div>
 </div>
