--- a/invoices.html
+++ b/invoices.html
@@ -45,13 +45,61 @@ title: Invoices
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>No.</th>
-      <th>Status</th>
-      <th>Value BTW in.</th>
-      <th>Value BTW ex.</th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Name
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          No.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Status
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Value BTW in.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Value BTW ex.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
       <th>BTW</th>
-      <th>Due date</th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Due date
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
       <th></th>
     </tr>
   </thead>
@@ -80,13 +128,61 @@ title: Invoices
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>No.</th>
-      <th>Status</th>
-      <th>Value BTW in.</th>
-      <th>Value BTW ex.</th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Name
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          No.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Status
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Value BTW in.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Value BTW ex.
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
       <th>BTW</th>
-      <th>Paid on time?</th>
+      <th>
+        <a href="#" title="Sort ascending">
+          Due date
+          <span class="sortable">
+            <b class="caret"></b>
+            <b class="caret flipped"></b>
+          </span>
+        </a>
+      </th>
       <th></th>
     </tr>
   </thead>
