--- a/invoices.html
+++ b/invoices.html
@@ -42,168 +42,172 @@ title: Invoices
 </div><!-- end row -->
 
 <h2>Invoices to be paid</h2>
-<table class="table table-striped table-condensed">
-  <thead>
-    <tr>
-      <th>
-        <a href="#" title="Sort ascending">
-          Name
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          No.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Status
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Value BTW in.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Value BTW ex.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>BTW</th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Due date
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for num in (1..5) %}
-    <tr>
-      <td><a href="edit-invoice.html">Client name</td>
-      <td>{% cycle '221', '220', '219', '218' %}</td>
-      <td>
-        {% cycle '<span class="label label-default">Not paid</span>', '<span class="label label-danger">Late</span>' %}
-      </td>
-      <td>€1210</td>
-      <td>€1000</td>
-      <td>€210</td>
-      <td>In 5 days</td>
-      <td>
-        <a href="#" class="btn btn-default btn-xs">Edit</a>
-        <a href="#" class="btn btn-default btn-xs">Delete</a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table class="table table-striped table-condensed table-responsive">
+    <thead>
+      <tr>
+        <th>
+          <a href="#" title="Sort ascending">
+            Name
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            No.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Status
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Value BTW in.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Value BTW ex.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>BTW</th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Due date
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for num in (1..5) %}
+      <tr>
+        <td><a href="edit-invoice.html">Client name</td>
+        <td>{% cycle '221', '220', '219', '218' %}</td>
+        <td>
+          {% cycle '<span class="label label-default">Not paid</span>', '<span class="label label-danger">Late</span>' %}
+        </td>
+        <td>€1210</td>
+        <td>€1000</td>
+        <td>€210</td>
+        <td>In 5 days</td>
+        <td>
+          <a href="#" class="btn btn-default btn-xs">Edit</a>
+          <a href="#" class="btn btn-default btn-xs">Delete</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div><!-- end responsive table -->
 
 <h2>Paid invoices</h2>
-<table class="table table-striped table-condensed">
-  <thead>
-    <tr>
-      <th>
-        <a href="#" title="Sort ascending">
-          Name
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          No.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Status
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Value BTW in.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Value BTW ex.
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th>BTW</th>
-      <th>
-        <a href="#" title="Sort ascending">
-          Due date
-          <span class="sortable">
-            <b class="caret"></b>
-            <b class="caret flipped"></b>
-          </span>
-        </a>
-      </th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for num in (1..10) %}
-    <tr>
-      <td><a href="edit-invoice.html">Client name</td>
-      <td>{% cycle '217', '216', '215', '214', '213', '212', '211', '210', '209', '208' %}</td>
-      <td><span class="label label-success">Paid</span></td>
-      <td>€1210</td>
-      <td>€1000</td>
-      <td>€210</td>
-      <td>OK</td>
-      <td>
-        <a href="#" class="btn btn-default btn-xs">Edit</a>
-        <a href="#" class="btn btn-default btn-xs">Delete</a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table class="table table-striped table-condensed">
+    <thead>
+      <tr>
+        <th>
+          <a href="#" title="Sort ascending">
+            Name
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            No.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Status
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Value BTW in.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Value BTW ex.
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>BTW</th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Due date
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for num in (1..10) %}
+      <tr>
+        <td><a href="edit-invoice.html">Client name</td>
+        <td>{% cycle '217', '216', '215', '214', '213', '212', '211', '210', '209', '208' %}</td>
+        <td><span class="label label-success">Paid</span></td>
+        <td>€1210</td>
+        <td>€1000</td>
+        <td>€210</td>
+        <td>OK</td>
+        <td>
+          <a href="#" class="btn btn-default btn-xs">Edit</a>
+          <a href="#" class="btn btn-default btn-xs">Delete</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div><!-- end responsive table -->
 
 <ul class="pagination">
   <li><a href="#">&laquo;</a></li>
