--- a/clients.html
+++ b/clients.html
@@ -8,4 +8,54 @@ title: Clients
   Add a new client
 </a>
 
-<p>@todo: add tables etc</p>
+
+<h2>Clients</h2>
+<div class="table-responsive">
+  <table class="table table-striped table-condensed table-responsive">
+    <thead>
+      <tr>
+        <th>
+          <a href="#" title="Sort ascending">
+            Company
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            Contact
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+        <th>
+          <a href="#" title="Sort ascending">
+            E-mail
+            <span class="sortable">
+              <b class="caret"></b>
+              <b class="caret flipped"></b>
+            </span>
+          </a>
+        </th>
+
+      </tr>
+    </thead>
+    <tbody>
+      {% for client in site.data.clients %}
+      <tr>
+        <td><a href="edit-client.html">{{client.company}}</td>
+        <td>{{client.name}}</td>
+        <td>{{client.email}}</td>
+        <td>
+          <a href="edit-client.html" class="btn btn-default btn-xs">Edit</a>
+          <a href="edit-client.html" class="btn btn-default btn-xs">Delete</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div><!-- end responsive table -->
