add basic stats placeholder

--- a/clients.html
+++ b/clients.html
@@ -2,14 +2,15 @@
 layout: app
 title: Clients
 ---
+<div class="row">
+  <h1><span class="glyphicon glyphicon-user"></span> Clients</h1>
 
-<a class="btn btn-success" data-toggle="modal" data-target="#add-client">
-  <span class="glyphicon glyphicon-plus"></span>
-  Add a new client
-</a>
+  <a class="btn btn-success" data-toggle="modal" data-target="#add-client">
+   <span class="glyphicon glyphicon-plus"></span>
+   Add a new client
+  </a>
+</div>
 
-
-<h2>Clients</h2>
 <div class="table-responsive">
   <table class="table table-striped table-condensed table-responsive">
     <thead>
