stats placeholder for client income

--- a/stats.html
+++ b/stats.html
@@ -11,7 +11,7 @@ title: Statistics
     <h3 class="panel-title">Revenue month over month</h3>
   </div>
   <div class="panel-body">
-    <div id="chart1" class="chart">
+    <div id="chart-income-by-month" class="chart">
       <svg></svg>
     </div>
   </div>
@@ -23,7 +23,9 @@ title: Statistics
     <h3 class="panel-title">Income by client</h3>
   </div>
   <div class="panel-body">
-    <p>@todo: graph</p>
+    <div id="chart-income-by-client" class="chart">
+      <svg></svg>
+    </div>
   </div>
 </div><!-- end panel -->
 
