--- a/invoices.html
+++ b/invoices.html
@@ -18,28 +18,24 @@ title: Invoices
   </div>
 
   <div class="col-md-6">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">Outstanding</div>
-          <div class="panel-body">
+    <div class="panel panel-default">
+      <div class="panel-body">
+
+        <div class="row">
+          <div class="col-md-6">
+            <p>Outstanding</p>
             <h2>€2400</h2>
           </div>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">Paid since 01/01/2014</div>
-          <div class="panel-body">
+          <div class="col-md-6">
+            <p>Paid since 01/01/2014</p>
             <h2>€5845</h2>
           </div>
         </div>
-      </div>
-    </div><!-- end row -->
 
+      </div>
+    </div>
   </div>
-</div><!-- end row -->
+</div>
 
 <h2>Invoices to be paid</h2>
 <div class="table-responsive">
