--- a/stats.html
+++ b/stats.html
@@ -2,8 +2,24 @@
 layout: app
 title: Statistics
 ---
+<div class="row">
+  <div class="pull-right col-md-6 form-horizontal">
+    <label class="col-md-6">
+      Current time period
+    </label>
+    <div class="col-md-6">
+      <select class="form-control">
+        <option selected="true">2014</option>
+        <option>2013</option>
+        <option>2012</option>
+      </select>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <h1><span class="glyphicon glyphicon-stats"></span> Statistics</h1>
+  </div>
 
-<h1><span class="glyphicon glyphicon-stats"></span> Statistics</h1>
+</div>
 
 
 <div class="panel panel-default">
